[gd_scene load_steps=4 format=2]

[ext_resource path="res://Assets/Sprites/GUI/Augment_Red0.png" type="Texture" id=1]
[ext_resource path="res://Scenes/Other/Augment_Tooltip.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scripts/Augment_Icon.gd" type="Script" id=3]

[node name="Augment_Icon" type="TextureRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -320.0
margin_top = -180.0
margin_right = 320.0
margin_bottom = 180.0
mouse_filter = 0
texture = ExtResource( 1 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Node2D" type="Node2D" parent="."]
z_index = 1

[node name="Augment_Tooltip" parent="Node2D" instance=ExtResource( 2 )]
visible = false
margin_left = 8.0
margin_top = 8.0
margin_right = 242.0
margin_bottom = 82.0

[connection signal="mouse_entered" from="." to="." method="_on_Augment_Icon_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_Augment_Icon_mouse_exited"]
